--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "linkifyjs": "^3.0.4",
     "moment": "^2.29.1",
     "postcss": "^7",
+    "register-service-worker": "^1.7.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
@@ -26,6 +27,7 @@
     "@aws-amplify/ui-vue": "^0.3.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.10",
     "@vue/cli-plugin-router": "^4.5.11",
     "@vue/cli-service": "~4.5.0",
     "aws-amplify": "^3.3.17",
